hotfix(header-mobile): Fix header changing size on mobile.

--- a/src/components/layout/layout.scss
+++ b/src/components/layout/layout.scss
@@ -69,6 +69,11 @@
     transition: color 1s;
   }
   grid-gap: 1em;
+  h1 {
+    height: 100%;
+    display: flex;
+    align-items: center;
+  }
 }
 
 a {
